Increased line spacing for easier reading, Changed cue arrow color to green, Cleaned client server communication, Fixed iOS wakelock, Prevent scroll speed focus during control

--- a/public/control/styles.css
+++ b/public/control/styles.css
@@ -53,7 +53,7 @@ a {
     overflow-y: auto; /* Allow vertical scrolling */
     padding: 20px;
     text-align: left;
-    line-height: 0.8;
+    line-height: 0.9;
     font-size: 12vw; /* Large font size for readability from a distance */
     font-size: calc(var(--vw, 1vw) * 12);
     text-transform: uppercase;
@@ -72,7 +72,7 @@ a {
     height: 0;
     border-top: 5vw solid transparent;
     border-bottom: 5vw solid transparent;
-    border-left: 5vw solid white; /* Triangle points left to right */
+    border-left: 5vw solid green; /* Triangle points left to right */
     transform: translateY(-50%);
 }
 
